--- a/nginx.conf
+++ b/nginx.conf
@@ -1,26 +1,9 @@
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on; 
-    keepalive_timeout  65;
-
-    server {
-        listen       8080;
-        server_name  localhost;
-        
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-            try_files $uri /index.html; 
-        }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            # root   html;
-            root /usr/share/nginx/html;
-        }
-    }
-
-    include servers/*;
+server {
+  listen 80;
+  location / {
+    proxy_hide_header Upgrade;
+    root /usr/share/nginx/html/dist;
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html =404;
+  }
 }
