--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
   listen 80;
   location / {
     proxy_hide_header Upgrade;
-    root /usr/share/nginx/html/dist;
+    root /usr/share/nginx/html;
     index index.html index.htm;
     try_files $uri $uri/ /index.html =404;
   }
