--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   ],
   "scripts": {
-    "start": "node dist/main.js",
+    "start": "SET NODE_ENV=production && node dist/main.js",
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
     "lintfix": "eslint src --fix --cache",
