--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
-  - prepare
+#  - prepare
   - build_docker
-#  - deploy_microk8s
+  - deploy_microk8s
 #cache:
 #  key: "$CI_BUILD_REF_NAME"
 #  untracked: true    
