fix: incorrect import

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 API_PORT = 2205
 API_HOST = http://localhost
+DB_SOKRATES_NAME = db_sokrates
+DB_SOKRATES_HOST = localhost
+DB_SOKRATES_DIALECT = postgres
+DB_SOKRATES_PASSWORD = postgres
+DB_SOKRATES_PASSWORD = postgres
 GOOGLE_OAUTH_REDIRECT_URI = http://localhost:2205/v1/auth/google
 GOOGLE_OAUTH_AUTH_URI = https://accounts.google.com/o/oauth2/auth
 GOOGLE_OAUTH_CLIENT_ID = 723674483738-349c7mf584iscnqen1b2ed7os6rihat0.apps.googleusercontent.com
