--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.5",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "add": "^2.0.6",
@@ -61,6 +63,9 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.0",
     "postgres": "^3.3.4",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "swagger-autogen": "^2.23.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   }
 }
