--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -21,17 +21,17 @@ spec:
         ports:
         - containerPort: 2205
         imagePullPolicy: IfNotPresent
-        volumeMounts:
-        - name: __CI_PROJECT_NAME__-vol
-          mountPath: /usr/src/app/
-          subPath: app
-        - name: __CI_PROJECT_NAME__-vol
-          mountPath: /usr/src/app/node_modules/
-          subPath: node_modules
+        #volumeMounts:
+        #- name: __CI_PROJECT_NAME__-vol
+        #  mountPath: /usr/src/app/
+        #  subPath: app
+        #- name: __CI_PROJECT_NAME__-vol
+        #  mountPath: /usr/src/app/node_modules/
+        #  subPath: node_modules
       restartPolicy: Always
-      volumes:
-        - name: __CI_PROJECT_NAME__-vol
-          persistentVolumeClaim:
-            claimName: __CI_PROJECT_NAME__-pv-claim
+      #volumes:
+      #  - name: __CI_PROJECT_NAME__-vol
+      #    persistentVolumeClaim:
+      #      claimName: __CI_PROJECT_NAME__-pv-claim
       imagePullSecrets:
         - name: regcred
