feat: user info

--- a/.env
+++ b/.env
@@ -10,5 +10,6 @@ GOOGLE_OAUTH_AUTH_URI = https://accounts.google.com/o/oauth2/auth
 GOOGLE_OAUTH_CLIENT_ID = 723674483738-349c7mf584iscnqen1b2ed7os6rihat0.apps.googleusercontent.com
 GOOGLE_OAUTH_CLIENT_SECRET = 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
 GOOGLE_OAUTH_TOKEN_URI = https://oauth2.googleapis.com/token
-JWT_SECRET_KEY = secretbangetboy
+JWT_SECRET_KEY = secretbangetboywjbf617
 JWT_EXPIRATION = 14d
+SESSION_SECRET_KEY = secretbangetboywjbf617
