--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-http-proxy": "^1.6.3",
+    "@types/express-session": "^1.17.7",
     "@types/express-validator": "^3.0.0",
+    "@types/ip": "^1.1.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.5",
@@ -28,7 +31,6 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
-    "add": "^2.0.6",
     "autoprefixer": "^10.4.14",
     "commitlint": "^17.6.3",
     "eslint": "^8.0.1",
@@ -50,22 +52,20 @@
     "@types/humps": "^2.0.2",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "concurrently": "^8.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-http-proxy": "^1.6.3",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "http": "^0.0.1-security",
     "humps": "^2.0.1",
+    "ip": "^1.1.8",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
+    "node-cache": "^5.1.2",
     "pg": "^8.11.0",
     "postgres": "^3.3.4",
     "sequelize": "^6.31.1",
-    "swagger-autogen": "^2.23.1",
-    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
   }
 }
