--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@swc/core": "^1.3.60",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/express-http-proxy": "^1.6.3",
     "@types/express-session": "^1.17.7",
@@ -26,6 +27,8 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.5",
+    "@types/request-ip": "^0.0.38",
+    "@types/socket.io": "^3.0.2",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
@@ -50,19 +53,25 @@
     "@types/humps": "^2.0.2",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-http-proxy": "^1.6.3",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "ext-ip": "^0.3.9",
     "http": "^0.0.1-security",
     "humps": "^2.0.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
+    "node-machine-id": "^1.1.12",
     "pg": "^8.11.0",
     "postgres": "^3.3.4",
+    "public-ip": "^6.0.1",
+    "request-ip": "^3.3.0",
     "sequelize": "^6.31.1",
+    "socket.io": "^4.6.2",
     "swagger-ui-express": "^4.6.3"
   }
 }
