--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
-API_PORT = 2205
-API_HOST = http://binus-be-community-stg-binus-be-community
-API_GATEWAY_HOST = https://bnsks-api.stagingapps.net
+API_PORT = 9003
+API_HOST = http://localhost
+API_GATEWAY_HOST = http://localhost:2205
 DB_HOST = 192.168.0.25
 DB_PORT = 5454
 DB_DIALECT = postgres
