--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^20.2.5",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
@@ -47,6 +49,7 @@
     "yarn": "^1.22.19"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.360.0",
     "@godaddy/terminus": "^4.12.0",
     "@types/humps": "^2.0.2",
     "axios": "^1.4.0",
@@ -61,6 +64,8 @@
     "humps": "^2.0.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-cache": "^5.1.2",
     "pg": "^8.11.0",
     "postgres": "^3.3.4",
