--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 API_PORT = 2205
 API_HOST = http://binus-be-community-stg-binus-be-community
 API_GATEWAY_HOST = https://bnsks-api.stagingapps.net
+API_HOST_SOKRATES = https://api.sokrates.xyz
 DB_HOST = 192.168.0.25
 DB_PORT = 5454
 DB_DIALECT = postgres
