--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "express-http-proxy": "^1.6.3",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "firebase-admin": "^11.10.1",
     "http": "^0.0.1-security",
     "humps": "^2.0.1",
     "jsonwebtoken": "^9.0.0",
