feat : getMappedTenant from Tenant UUID

--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@ API_PORT = 9003
 API_HOST = http://localhost
 API_GATEWAY_HOST = http://localhost:2205
 API_HOST_SOKRATES = https://api.sokrates.xyz
+API_SYSTEM_SOKRATES = https://system.api.sokrates.xyz
 DB_HOST = 192.168.0.25
 DB_PORT = 5454
 DB_DIALECT = postgres
